[gd_scene load_steps=2 format=3 uid="uid://cg73pbpaxk2ty"]

[ext_resource type="Script" uid="uid://cxdbmpor2aro4" path="res://Task/QuestionnaireTask/questionnaire.gd" id="1_tm2c8"]

[node name="Questionnaire" type="Node2D"]
script = ExtResource("1_tm2c8")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 594.0
offset_top = 460.0
offset_right = 1309.0
offset_bottom = 774.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Button1" type="Button" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Button 1"

[node name="Button2" type="Button" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Button 3"

[node name="VSplitContainer2" type="VSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Button3" type="Button" parent="HSplitContainer/VSplitContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Button 2"

[node name="Button4" type="Button" parent="HSplitContainer/VSplitContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "Button 4"

[node name="QuestionLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 774.0
offset_top = 336.0
offset_right = 1131.0
offset_bottom = 445.0
grow_horizontal = 2
grow_vertical = 2
text = "Question"
horizontal_alignment = 1

[connection signal="pressed" from="HSplitContainer/VSplitContainer/Button1" to="." method="OnButton1Pressed"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer/Button2" to="." method="OnButton2Pressed"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer2/Button3" to="." method="OnButton3Pressed"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer2/Button4" to="." method="OnButton4Pressed"]
